# ewi

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json  journal.md  vcpkg.json
src/: CMakeLists.txt  _explore.hpp  entry.cpp  entry.hpp  entry.t.cpp  ewi_controller.cpp  ewi_controller.hpp  ewi_tracker.cpp  explore.cpp  explore.hpp  metricstats.hpp  record.cpp  record.hpp  record.t.cpp  survey.hpp  utils.hpp
src/ewi/: CMakeLists.txt  _explore.cpp  _explore.hpp  basic_id.cpp  basic_id.hpp  basic_id.t.cpp  employee_record.cpp  employee_record.hpp  employee_record.t.cpp  entry.cpp  entry.hpp  entry.t.cpp  metrics.cpp  metrics.hpp  metrics.t.cpp  metricstats.cpp  metricstats.hpp  record.cpp  record.hpp  record.t.cpp  survey.cpp  survey.hpp  survey.t.cpp
src/ewiQt/: CMakeLists.txt  QtConverter.cpp  QtConverter.hpp  QtConverter.t.cpp  appConstants.cpp  appConstants.hpp  ewiUI.cpp  ewiUI.hpp  ewiUI.t.cpp  ewi_ui.cpp  ewi_ui.hpp  ewi_ui.t.cpp  form.cpp  form.hpp  form.t.cpp  imgViewer.cpp  imgViewer.hpp  imgViewer.t.cpp  profileLoader.cpp  profileLoader.hpp  profileLoader.t.cpp  userOpsWidget.cpp  userOpsWidget.hpp  userOpsWidget.t.cpp  views.cpp  views.hpp  views.t.cpp
src/utils/: CMakeLists.txt  padded_view.cpp  padded_view.hpp  padded_view.t.cpp  utils.t.cpp
src/utils/string_flattener/: CMakeLists.txt  string_flattener.cpp  string_flattener.hpp  string_flattener.md  string_flattener.t.cpp
test_resources/ewi/: eeo_profile.txt
